Add route parameters to paginator
